@@ -70,6 +70,9 @@
      which in turn required some things to be converted from u_short => int
      make use of int vs. u_short consistent in some other places too
      feedback & ok markus@
+   - djm@cvs.openbsd.org 2009/01/22 10:09:16
+     [auth-options.c]
+     another chunk of a2port() diff that got away. wtfdjm??
 
 20090107
  - (djm) [uidswap.c] bz#1412: Support >16 supplemental groups in OS X.
@@ -5079,5 +5082,5 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5175 2009/01/28 05:31:22 djm Exp $
+$Id: ChangeLog,v 1.5176 2009/01/28 05:33:01 djm Exp $
 
